apps/connect/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect
  namespace: default
  labels:
    app: connect
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: connect
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: connect
    spec:
      serviceAccountName: connect
      containers:
        - name: connect
          image: ghcr.io/wisvch/connect:20250302-43116cc # {"$imagepolicy": "flux-system:connect"}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 750Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /connect
              name: connect
              readOnly: true
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.26.0 # {"$imagepolicy": "flux-system:cloud-sql-proxy"}
          args:
            - "--structured-logs"
            - "--private-ip"
            - "--port=5432"
            - "-i" # Enables automatic authentication through the serviceaccount
            - "wisvch:europe-west4:geurt"
          securityContext:
            runAsNonRoot: true
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 10Mi
      volumes:
        - name: connect
          secret:
            defaultMode: 420
            secretName: connect
