apps/connect/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: connect
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    name: gateway
  hostnames:
  - connect.ch.tudelft.nl
  rules:
  - backendRefs:
    - name: connect
      port: 80
